Add allowed hosts to nginx.conf

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,7 +1,11 @@
 server {
     listen 80;
-    server_name localhost;
-    
+    server_name tobiasuihlein.de www.tobiasuihlein.de spotifypreviewscanner.tobiasuihlein.de;
+
+    if ($host !~* ^(tobiasuihlein.de|www.tobiasuihlein.de|spotifypreviewscanner.tobiasuihlein.de)$) {
+        return 444;
+    }
+
     location / {
         root /usr/share/nginx/html;
         index index.html;
